# get-settings

./: .gitignore  LICENSE  README.md  pyproject.toml
get_settings/: __init__.py  main.py
read_settings/: main.py
